kubernetes-configs/kubernetes-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: space-inv
  name: space-inv-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: space-inv
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: space-inv
    spec:
      containers:
      - image: drehnstrom/space-invaders:v2.0
        name: space-invaders
        resources: {}
status: {}
